{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 38,
  "lineage": "596e5843-c7b1-8438-f027-83cd47694d84",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06d0a3fe7957a186e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-219-149-153.compute-1.amazonaws.com",
            "public_ip": "3.219.149.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-TF"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076066122281:internet-gateway/igw-09bac08ceb0fa8f1b",
            "id": "igw-09bac08ceb0fa8f1b",
            "owner_id": "076066122281",
            "tags": {
              "Name": "IGW-TF"
            },
            "vpc_id": "vpc-0dd45b0c7a5cda034"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d0a3fe7957a186e",
            "id": "nat-0a5bcd1bf72e4dfcc",
            "network_interface_id": "eni-06aa67dd9674b31d1",
            "private_ip": "10.10.1.21",
            "public_ip": "3.219.149.153",
            "subnet_id": "subnet-066a6f4ad42c7d606",
            "tags": {
              "Name": "NAT-TF"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07f07733c4eae6c1f",
            "owner_id": "076066122281",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a5bcd1bf72e4dfcc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table-TF"
            },
            "vpc_id": "vpc-0dd45b0c7a5cda034"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d0cade3eb56bba99",
            "owner_id": "076066122281",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bac08ceb0fa8f1b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table-TF"
            },
            "vpc_id": "vpc-0dd45b0c7a5cda034"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d17540183d24ce60",
            "route_table_id": "rtb-07f07733c4eae6c1f",
            "subnet_id": "subnet-0bd85bfbff21baec5"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a446202067ab154",
            "route_table_id": "rtb-0d0cade3eb56bba99",
            "subnet_id": "subnet-066a6f4ad42c7d606"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076066122281:security-group/sg-06a33806fa3a93320",
            "description": "Allow ssh inbound traffic / Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a33806fa3a93320",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "076066122281",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security-Group-TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd45b0c7a5cda034"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076066122281:subnet/subnet-0bd85bfbff21baec5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0bd85bfbff21baec5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076066122281",
            "tags": {
              "Name": "Private-Subnet-TF"
            },
            "vpc_id": "vpc-0dd45b0c7a5cda034"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076066122281:subnet/subnet-066a6f4ad42c7d606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-066a6f4ad42c7d606",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076066122281",
            "tags": {
              "Name": "Public-Subnet-TF"
            },
            "vpc_id": "vpc-0dd45b0c7a5cda034"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076066122281:vpc/vpc-0dd45b0c7a5cda034",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0739b747443f79ce8",
            "default_route_table_id": "rtb-05e5e09d0289959f9",
            "default_security_group_id": "sg-015db0f933eb2abd8",
            "dhcp_options_id": "dopt-4028e73a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dd45b0c7a5cda034",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05e5e09d0289959f9",
            "owner_id": "076066122281",
            "tags": {
              "Name": "MAIN-TF"
            }
          }
        }
      ]
    }
  ]
}